# Home_Work_WEB_2

docker_personal_assistant/: Dockerfile  addressbook.csv  main.py  main_run.py  notes.csv  requirements.txt
poetry_personal_assistant/: README.md  pyproject.toml
poetry_personal_assistant/poetry_personal_assistant/: main.py  main_run.py
